@@ -1,1 +1,1 @@
-DIST pythontex_0.12.zip 1537341 SHA256 5d37f59200fd4d41180dac7ebdf1d4c1ce276b25cb66483a8d64c6a285220579 SHA512 1e2fc36100be20b16fa25d987a6e4568724e6ab3edff3e9544dd90a14428b471e98ac29413aa9ef60e144aa963e6ef260932cad1903bb762d55421c35a0b69ff WHIRLPOOL 957a43e31f17f91386df739840cb0cb30d84db330c0b0e76e5602eb28ea24836569f72790d9dd6a8bdb26a6c073992a876db47102e46107467c349c0771f03bf
+DIST pythontex-0.14.tar.gz 9704671 SHA256 d26501386d313cc7a0375e4ea3bec61aed38abb059f09042c8e0e015e980bce4 SHA512 dc37e3ac112ace95d4ac253f51fe08074cf465537fa8e686637dd2342edb397e89a1e9ee1111fd6b93bcf4194b8bbbcb5cbcc5256d4c451809bf96bb28ae3db6 WHIRLPOOL 9a5106446b61f514b3575170abcba0b9cd6eb2c896c6a12174cd4ae1c01e442e7625cde2cab06b2828e3fc07f4fac9edca4388253c49e8952fb4ad7829355366
